# quiz-assistant

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  ai_service.cpp  ai_service.hpp  database.cpp  database.hpp  index.html  quiz_server.cpp  刷题助手.html  项目规划.md
data/: sample_questions.json
docs/superpowers/plans/: 2026-06-13-quiz-assistant-cpp-plan.md
docs/superpowers/specs/: 2026-06-13-quiz-assistant-cpp-design.md
lib/: httplib.h
output/: 项目总结报告.tex  项目答辩.pptx
